@@ -3,6 +3,7 @@
 General:
 Version 1.39.32 released: 
 20Dec06
+kes  Take first catalog if gui is set, or if using dotcmd.
 kes  Fix a couple of compiler warnings in wx-console
 kes  Apply the immutable patch for FreeBSD hardlinked files supplied
      by Olivier Lehmann.
